# rust-yew-todo

./: Makefile  build.sh  build_frontend.sh  deploy.sh  run.sh  static-binary.sh
backend/: .container-script.sh  .gitignore  Cargo.toml
backend/src/: main.rs
backend/static/: fix_ios.js  styles.css
frontend/: Cargo.toml
frontend/src/: entry.rs  lib.rs  main.rs
