[package]
name = "backend"
version = "0.1.0"
authors = ["crab"]

[dependencies]
rocket = "^0.4.0"
rocket_contrib = "^0.4.0"
sled = "0.15.17"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_json = "1.0.27"
maud = { version = "0.20.0", features = ["rocket"] }
rocket_codegen = "^0.4.0"
rust-embed = "3.0.0"
