[package]
name = "frontend"
version = "0.1.0"
authors = ["crab"]

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew.git", branch = "master" }
serde_derive = "1.0.78"
serde = "1.0.78"
failure = "0.1.2"
serde_json = "1.0.27"
stdweb = "0.4.9"

[[bin]]
name = "frontend"
path = "src/main.rs"
